feat: Full i18n support with `i18n` attr flag & `@format` attr

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -1,6 +1,6 @@
 ## Internationalization (i18n)
 
-Lips includes built-in support for internationalization, making it easy to create multilingual applications.
+Lips includes built-in support for internationalization, making it easy to create multilingual applications including many other util formats like **Date**, **Metri Units**, **Float & Currency Number**, etc by languages and countries.
 
 ### Setting up Languages
 
@@ -53,17 +53,17 @@ lips.language('es-ES');
 lips.language('en');
 ```
 
-When the language changes, all components that display translated content will automatically update.
+When the language changes, all components that display translated content with `i18n` attribute flag will automatically update.
 
 ### Using Translations
 
 Translations are automatically applied to text content in your templates:
 
 ```html
-<h1>Welcome</h1>
-<p>Hello, {state.name}</p>
-<span>{state.items.length} items</span>
-<button>Submit</button>
+<h1 i18n>Welcome</h1>
+<p i18n>Hello, {state.name}</p>
+<span i18n>{state.items.length} items</span>
+<button i18n>Submit</button>
 ```
 
 If the current language is French, this would render as:
@@ -73,40 +73,6 @@ If the current language is French, this would render as:
 <p>Bonjour, John</p>
 <span>5 éléments</span>
 <button>Soumettre</button>
-```
-
-### Translation with Variables
-
-You can include variables in translation strings:
-
-```javascript
-// Dictionary entry
-{
-  'items_count': '{count} items',
-  'welcome_user': 'Welcome back, {name}!'
-}
-
-// Template usage
-<p @format="items_count, { count: state.items.length }"/>
-<p @format="welcome_user, { name: state.user.name }"/>
-```
-
-### Handling Plurals
-
-You can define different translations based on numeric values:
-
-```javascript
-// Dictionary entry with plural forms
-{
-  'items_count': {
-    '*': '{count} items',    // Default (plurals)
-    '1': '{count} item',     // Exactly 1
-    '0': 'No items'          // Zero
-  }
-}
-
-// Template usage
-<p @format="items_count, { count: state.items.length }"/>
 ```
 
 ### Language Variants
@@ -127,6 +93,40 @@ lips.i18n.setDictionary('en', englishDictionary);
 
 // Switch to British English
 lips.language('en-GB');
+```
+
+### Translation with Variables
+
+You can include variables in translation strings using `@format` attribute:
+
+```javascript
+// Dictionary entry
+{
+  'items_count': '{count} items',
+  'welcome_user': 'Welcome back, {name}!'
+}
+
+// Template usage
+<p @format="items_count, { count: state.items.length }"/>
+<p @format="welcome_user, { name: state.user.name }"/>
+```
+
+### Handling Plurals format
+
+You can define different translations based on numeric values:
+
+```javascript
+// Dictionary entry with plural forms
+{
+  'items_count': {
+    '*': '{count} items',    // Default (plurals)
+    '1': '{count} item',     // Exactly 1
+    '0': 'No items'          // Zero
+  }
+}
+
+// Template usage
+<p @format="items_count, { count: state.items.length }"/>
 ```
 
 ### Excluding Content from Translation
