imp: Update `i18n` documentation on `@format` usage

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -102,8 +102,14 @@ You can include variables in translation strings using `@format` attribute:
 ```javascript
 // Dictionary entry
 {
-  'items_count': '{count} items',
-  'welcome_user': 'Welcome back, {name}!'
+  'items_count': {
+    'type': 'variable',
+    'value': '{count} items'
+  },
+  'welcome_user': {
+    'type': 'variable',
+    'value': 'Welcome back, {name}!'
+  }
 }
 
 // Template usage
@@ -113,20 +119,43 @@ You can include variables in translation strings using `@format` attribute:
 
 ### Handling Plurals format
 
-You can define different translations based on numeric values:
+You can define different translations based on numeric `count` value:
 
 ```javascript
 // Dictionary entry with plural forms
 {
   'items_count': {
-    '*': '{count} items',    // Default (plurals)
-    '1': '{count} item',     // Exactly 1
-    '0': 'No items'          // Zero
+    'type': 'plural',
+    'value': {
+      '*': '{count} items',    // Default (plurals)
+      '1': '{count} item',     // Exactly 1
+      '0': 'No items'          // Zero
+    }
   }
 }
 
 // Template usage
 <p @format="items_count, { count: state.items.length }"/>
+```
+
+### Handling Condition format
+
+You can set up different translations based on conditions value:
+
+```javascript
+// Dictionary entry with plural forms
+{
+  'allowed_age_check': {
+    'type': 'condition',
+    'value': {
+      'age >= 18': 'Let do this!',
+      'age < 18': '{age} years old users are not allowed'
+    }
+  }
+}
+
+// Template usage
+<p @format="allowed_age_check, { age: input.user.age }"/>
 ```
 
 ### Excluding Content from Translation
